-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8232269 | 13.0.2 | Per Liden | P2 | Closed | Fixed | b02 |
In the end, our barrier is only a conditional branch to a slow path, so there is really nothing that the optimizer can do to help us make that better. But it has many creative ways of breaking our GC invariants.
I think we have finally had enough of this, and want to move the barrier expansion to the MachNode level instead. This way, we can finally put an end to the load and its load barrier being separated (and related even more complicated issues for atomics).
- backported by
-
JDK-8232269 ZGC: Redesign C2 load barrier to expand on the MachNode level
-
- Closed
-
- duplicates
-
JDK-8229177 ZGC: SIGSEGV in ZRelocate::forward_object
-
- Closed
-
-
JDK-8229179 FindInstanceClosure::do_object crash during safepoint
-
- Closed
-
-
JDK-8229384 ZGC: vmTestbase/gc/memory/Churn/Churn3/Churn3.java failed due to SIGSEGV
-
- Closed
-
-
JDK-8229438 ZGC: CompiledMethod::cleanup_inline_caches_impl
-
- Closed
-
-
JDK-8229849 gc/concurrent/lp30yp25rp30mr0st300 failed due to timeout
-
- Closed
-
-
JDK-8229969 ZGC: Crash in ZBarrierSetC2::optimize_loops - PhaseIterGVN::transform_old
-
- Closed
-
-
JDK-8229984 ZGC: assert(dominators_of_region <= 1) failed: More than one region can't require extra phi
-
- Closed
-
-
JDK-8230326 ZGC: void ZHeapIterator::push_fields<true>(oop)+0x78
-
- Closed
-
-
JDK-8231028 ZGC: assert(Reachblock[slidx] != __null) failed: No reaching definition for liveout value #
-
- Closed
-
-
JDK-8230386 ZGC: Crash in IDEA
-
- Closed
-
-
JDK-8229909 ZGC: Performance regression after JDK-8225642
-
- Closed
-
- relates to
-
JDK-8292602 ZGC: C2 late barrier analysis uses invalid dominator information
-
- Resolved
-