8230565: ZGC: Redesign C2 load barrier to expand on the MachNode level

Co-authored-by: Erik Osterlund <erik.osterlund@oracle.com>
Co-authored-by: Stefan Karlsson <stefan.karlsson@oracle.com>
Co-authored-by: Nils Eliasson <nils.eliasson@oracle.com>
Reviewed-by: pliden, stefank, neliasso

Conflicts:
	src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.cpp
	src/hotspot/cpu/aarch64/gc/z/zBarrierSetAssembler_aarch64.hpp
	src/hotspot/cpu/aarch64/gc/z/z_aarch64.ad
	src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp
	src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.hpp
	src/hotspot/cpu/x86/gc/z/z_x86_64.ad
	src/hotspot/cpu/x86/x86_64.ad
	src/hotspot/share/adlc/formssel.cpp
	src/hotspot/share/compiler/compilerDirectives.hpp
	src/hotspot/share/gc/shared/c2/barrierSetC2.hpp
	src/hotspot/share/gc/z/c2/zBarrierSetC2.cpp
	src/hotspot/share/gc/z/c2/zBarrierSetC2.hpp
	src/hotspot/share/opto/classes.hpp
	src/hotspot/share/opto/compile.cpp
	src/hotspot/share/opto/compile.hpp
	src/hotspot/share/opto/loopnode.cpp
	src/hotspot/share/opto/memnode.cpp
	src/hotspot/share/opto/memnode.hpp
	src/hotspot/share/opto/node.cpp
	src/hotspot/share/opto/node.hpp
	src/hotspot/share/opto/output.cpp